--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,20 @@
-#style-4::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
+* {
+  box-sizing: border-box;
+  &::-webkit-scrollbar-track {
+    background-color: #F5F5F5;
+  }
+  
+  &::-webkit-scrollbar {
+    width: 4px;
+    background-color: #F5F5F5;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border: 2px solid #555555;
+  }
 }
 
-#style-4::-webkit-scrollbar
-{
-  width: 10px;
-  background-color: #F5F5F5;
-}
-
-#style-4::-webkit-scrollbar-thumb
-{
-  background-color: #000000;
-  border: 2px solid #555555;
+body {
+  overflow-x: hidden;
 }
