--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: monospace,ui-sans-serif, ui-rounded, ui-monospace, system-ui, fantasy, cursive, serif;
   &::-webkit-scrollbar-track {
     background-color: #F5F5F5;
   }
