--- a/src/index.scss
+++ b/src/index.scss
@@ -2,12 +2,12 @@
   box-sizing: border-box;
   font-family: monospace, system-ui, fantasy, cursive, serif;
   &::-webkit-scrollbar-track {
-    background-color: #F5F5F5;
+    background-color: var(--bg-color);
   }
   
   &::-webkit-scrollbar {
     width: 4px;
-    background-color: #F5F5F5;
+    background-color: var(--bg-color);
   }
   
   &::-webkit-scrollbar-thumb {
@@ -21,6 +21,14 @@ body {
   background-color: var(--bg-color);
   color: var(--font-color);
 }
+input, button {
+  background-color: var(--bg-color);
+}
+
+button, input {
+  border: 1px solid var(--color);
+}
+ 
 
 /* Hide handler for WebKit browsers */
 
