--- a/src/index.scss
+++ b/src/index.scss
@@ -34,5 +34,16 @@ button,
 input {
   border: 1px solid var(--color);
 }
+button:disabled,
+button[disabled] {
+  background-color: #ddd;
+  color: #666666;
+  svg {
+    stroke: #aaa;
+    path {
+      fill: #aaa;
+    }
+  }
+}
 
 /* Hide handler for WebKit browsers */
