--- a/src/index.scss
+++ b/src/index.scss
@@ -31,9 +31,11 @@ button {
 }
 
 button,
-input {
+input[type='text'] {
   border: 1px solid var(--color);
-  accent-color: orange;
+}
+input[type='radio'] {
+  accent-color: #f315f3;
 }
 button:disabled,
 button[disabled] {
