add icons and fix pane position issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,7 @@ input[type='text'] {
   border: 1px solid var(--color);
 }
 input[type='radio'] {
-  accent-color: #f315f3;
+  // accent-color: #f315f3;
 }
 button:disabled,
 button[disabled] {
