--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,7 @@
 
 :root {
   --border: 1px solid #e2e8f0;
+  --color: #333;
 }
 
 body {
@@ -50,7 +51,7 @@ button[disabled] {
 }
 progress {
   -webkit-appearance: none;
-   appearance: none;
+  appearance: none;
 }
 
 /* Hide handler for WebKit browsers */
@@ -78,4 +79,13 @@ progress {
 }
 .ll {
   overflow: scroll !important;
+}
+.sfs {
+  font-size: 12px;
+}
+.pl5 {
+  padding-left: 5px;
+}
+.ps-btn {
+  padding: 1px;
 }
