add wide gamut component

--- a/src/index.scss
+++ b/src/index.scss
@@ -49,6 +49,9 @@ button[disabled] {
     }
   }
 }
+.darkFillPath {
+  fill:#000000;
+}
 progress {
   -webkit-appearance: none;
   appearance: none;
